--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -14,33 +14,24 @@
         "link": "link:///features"
     "splitHeroRightImage": "mediakit://doc-regenerate.png"
   - "sectionName": "KeyBenefits"
-    "sectionSummary": "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the value proposition easy to digest."
+    "sectionSummary": "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the information easy to digest at a glance."
     "threeColumnGridTitle": "Why You'll Love DocSmith"
     "list":
       - "sectionName": "IntelligentAnalysisCard"
         "sectionSummary": "Benefit card explaining the AI's deep understanding of code."
-        "featureSectionTitle": "Intelligent Analysis"
-        "featureSectionDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
-        "featureSectionBottomImage": "https://placehold.co/600x400?text=AI"
-        "featureSectionAction":
-          "text": "Learn More"
-          "link": "https://www.arcblock.io/"
+        "iconName": "lucide:brain-circuit"
+        "cardTitle": "Intelligent Analysis"
+        "cardDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
       - "sectionName": "GlobalReadyCard"
         "sectionSummary": "Benefit card highlighting the multi-language translation capabilities."
-        "featureSectionTitle": "Global Ready"
-        "featureSectionDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
-        "featureSectionBottomImage": "https://placehold.co/600x400?text=Global"
-        "featureSectionAction":
-          "text": "See Features"
-          "link": "link:///features"
+        "iconName": "lucide:globe"
+        "cardTitle": "Global Ready"
+        "cardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
       - "sectionName": "AlwaysCurrentCard"
         "sectionSummary": "Benefit card emphasizing the automatic update feature to keep docs in sync."
-        "featureSectionTitle": "Always Current"
-        "featureSectionDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
-        "featureSectionBottomImage": "https://placehold.co/600x400?text=Sync"
-        "featureSectionAction":
-          "text": "Get Started"
-          "link": "link:///quick-start"
+        "iconName": "lucide:refresh-cw"
+        "cardTitle": "Always Current"
+        "cardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
   - "sectionName": "ProductDemo"
     "sectionSummary": "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
     "oneColumnGridTitle": "See It In Action: From Code to Docs in Minutes"
