fix: update pages

--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,26 @@
 entries:
+  - timestamp: 2025-10-16T07:44:31.603Z
+    operation: structure_update
+    feedback: 新增 about 页面
+  - timestamp: 2025-10-16T07:44:02.754Z
+    operation: structure_update
+    feedback: Quick Start Guide 标题修改为 Quick Start
+  - timestamp: 2025-10-16T07:43:17.339Z
+    operation: structure_update
+    feedback: add features page
+  - timestamp: 2025-10-16T07:32:10.706Z
+    operation: structure_update
+    feedback: 新增 features 页面
+  - timestamp: 2025-10-16T07:26:13.410Z
+    operation: structure_update
+    feedback: add features page
+  - timestamp: 2025-10-16T07:24:08.192Z
+    operation: structure_update
+    feedback: 新增一个 /features 页面
+  - timestamp: 2025-10-16T07:20:20.097Z
+    operation: page_update
+    feedback: section2 不使用列表，改为使用左右布局的组件展示信息
+    page: /home
   - timestamp: 2025-10-16T07:15:02.275Z
     operation: page_update
     feedback: section2 保持现在的信息，但是不使用列表展示
