--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -13,25 +13,21 @@
       - "text": "View Features"
         "link": "link:///features"
     "splitHeroRightImage": "mediakit://doc-regenerate.png"
-  - "sectionName": "KeyBenefits"
-    "sectionSummary": "Highlights the three core benefits of DocSmith in a scannable, three-column grid. Each card uses an icon to visually represent the benefit, making the information easy to digest at a glance."
-    "threeColumnGridTitle": "Why You'll Love DocSmith"
-    "list":
-      - "sectionName": "IntelligentAnalysisCard"
-        "sectionSummary": "Benefit card explaining the AI's deep understanding of code."
-        "iconName": "lucide:brain-circuit"
-        "cardTitle": "Intelligent Analysis"
-        "cardDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
-      - "sectionName": "GlobalReadyCard"
-        "sectionSummary": "Benefit card highlighting the multi-language translation capabilities."
-        "iconName": "lucide:globe"
-        "cardTitle": "Global Ready"
-        "cardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
-      - "sectionName": "AlwaysCurrentCard"
-        "sectionSummary": "Benefit card emphasizing the automatic update feature to keep docs in sync."
-        "iconName": "lucide:refresh-cw"
-        "cardTitle": "Always Current"
-        "cardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
+  - "sectionName": "IntelligentAnalysisBenefit"
+    "sectionSummary": "Benefit section for Intelligent Analysis with a supporting visual on the left and descriptive text on the right, creating a clear left-right layout."
+    "contentCardTitle": "Intelligent Analysis"
+    "contentCardDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create truly meaningful docs."
+    "contentCardLeftImage": "https://placehold.co/800x450?text=Intelligent+Analysis"
+  - "sectionName": "GlobalReadyBenefit"
+    "sectionSummary": "Benefit section for Global Ready, featuring text on the left and a visual on the right to create an alternating left-right flow."
+    "contentCardTitle": "Global Ready"
+    "contentCardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
+    "contentCardRightImage": "https://placehold.co/800x450?text=Global+Ready"
+  - "sectionName": "AlwaysCurrentBenefit"
+    "sectionSummary": "Benefit section for Always Current, returning to a left-image, right-text layout to complete the dynamic, scannable presentation of key benefits."
+    "contentCardTitle": "Always Current"
+    "contentCardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
+    "contentCardLeftImage": "https://placehold.co/800x450?text=Always+Current"
   - "sectionName": "ProductDemo"
     "sectionSummary": "A dynamic, multi-step showcase of the DocSmith workflow using alternating terminal players. This section demonstrates the core commands—generate, update, translate, and publish—to give users a tangible feel for the product."
     "oneColumnGridTitle": "See It In Action: From Code to Docs in Minutes"
