fix: add check before evaluate/publish/translate/update

--- a/agents/evaluate/index.yaml
+++ b/agents/evaluate/index.yaml
@@ -6,6 +6,7 @@ skills:
     default_input:
       skipIfExists: true
       checkOnly: true
+  - url: ../init/check.mjs
   - ../utils/load-sources.mjs
   - ../utils/format-document-structure.mjs
   - type: transform
