--- a/agents/publish/index.yaml
+++ b/agents/publish/index.yaml
@@ -9,6 +9,7 @@ skills:
     default_input:
       skipIfExists: true
       checkOnly: true
+  - url: ../init/check.mjs
   - translate-meta.mjs
   - publish-docs.mjs
 input_schema:
