--- a/agents/translate/index.yaml
+++ b/agents/translate/index.yaml
@@ -7,6 +7,7 @@ skills:
       skipIfExists: true
       checkOnly: true
   - ../utils/load-sources.mjs
+  - url: ../init/check.mjs
   - type: transform
     task_render_mode: hide
     jsonata: |
